[tool.poetry]
name = "backend"
version = "1.0.0"
description = ""
authors = ["Slava Petrov <slavapmk@gmail.com>"]
packages = [{ include = "python", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.11.10"
dynaconf = "^3.2.12"
psycopg = {extras = ["async", "binary", "pool"], version = "^3.2.10"}
pyyaml = "^6.0.3"
pymorphy2 = "^0.9.1"
setuptools = "^80.9.0"
poetry-core = "^2.2.1"
fastapi = {extras = ["standard"], version = "^0.121.0"}
uvicorn = "^0.38.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
csohelper = "python.main:entrypoint"

[virtualenvs]
in-project = true